move to HttpClient, rollback java 8 build